Add redirect and counter to track redirect clicks for each link

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 <form action="/links" method="POST">
   <div class="form-group">
     <label for="url">URL:</label>
-    <textarea name="url" rows="8" cols="40" placeholder="Link Goes Here"></textarea>
+    <textarea name="url" rows="8" cols="40" value="http://" placeholder="Link Goes Here"></textarea>
   </div>
   <input type="submit" class="btn btn-primary">
 </form>
