--- a/views/links.ejs
+++ b/views/links.ejs
@@ -1,1 +1,3 @@
-<h1>Your Short Link!</h1>
+<h1>Your Short Link #<%= link.id %>!</h1>
+
+<h3> <a href="http://localhost:3000/<%= hash %>">http://localhost:3000/<%= hash %></a> </h3>
